force-app/main/default/objects/ssot__Account__dlm/ssot__Account__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <description>How the party want to interact with your enterprise e.g. have multiple billing or service accounts, can be hierarchical in nature and normally one particular business unit within the company owns the account.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Account</referenceEntityGroup>
        <referenceEntityName>Account</referenceEntityName>
        <referenceEntitySubjectArea>Account</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>