force-app/main/default/objects/ssot__Account__dlm/fields/Account_fax__c.field-meta.xml
<CustomField>
    <fullName>Account_fax__c</fullName>
    <label>Account fax</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>