force-app/main/default/objects/ssot__Account__dlm/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>