force-app/main/default/objects/ssot__Account__dlm/fields/AML_Date__c.field-meta.xml
<CustomField>
    <fullName>AML_Date__c</fullName>
    <label>AML Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>