force-app/main/default/objects/ssot__Account__dlm/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <label>Available Credit</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>