force-app/main/default/objects/ssot__Account__dlm/fields/Bad_Credit_Returned_Check__c.field-meta.xml
<CustomField>
    <fullName>Bad_Credit_Returned_Check__c</fullName>
    <label>Bad Credit/Returned Check</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>