force-app/main/default/objects/ssot__Account__dlm/fields/Birthday_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Formula_Field__c</fullName>
    <label>Birthday Formula Field</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>