force-app/main/default/objects/ssot__Account__dlm/fields/CustType__c.field-meta.xml
<CustomField>
    <fullName>CustType__c</fullName>
    <label>CustType</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>