force-app/main/default/objects/ssot__Account__dlm/fields/Data_com_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Key__c</fullName>
    <label>Data.com Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>