force-app/main/default/objects/ssot__Account__dlm/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <label>Deleted</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>