force-app/main/default/objects/ssot__Account__dlm/fields/Do_Not_Promote__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Promote__c</fullName>
    <label>Do Not Promote</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>