force-app/main/default/objects/ssot__Account__dlm/fields/Email_Acquired_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Acquired_Date__c</fullName>
    <label>Email Acquired Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>