force-app/main/default/objects/ssot__Account__dlm/fields/Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Number__c</fullName>
    <label>Exemption Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>