force-app/main/default/objects/ssot__Account__dlm/fields/First_3_Digit_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>First_3_Digit_Zip_Code__c</fullName>
    <label>First 3 Digit Zip Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>