force-app/main/default/objects/ssot__Account__dlm/fields/First_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Date__c</fullName>
    <label>First Order Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>