force-app/main/default/objects/ssot__Account__dlm/fields/Indexed_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Indexed_Account_Number__c</fullName>
    <label>Indexed Account Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>