force-app/main/default/objects/ssot__Account__dlm/fields/Is_Seller_Importer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Seller_Importer_Of_Record__c</fullName>
    <label>Is Seller Importer Of Record</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>