force-app/main/default/objects/ssot__Account__dlm/fields/Jigsaw_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw_Company_ID__c</fullName>
    <label>Jigsaw Company ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>