force-app/main/default/objects/ssot__Account__dlm/fields/KQ_BillContactAddressId__c.field-meta.xml
<CustomField>
    <fullName>KQ_BillContactAddressId__c</fullName>
    <label>Key Qualifier Bill Contact Address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_BillContactAddressId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>