force-app/main/default/objects/ssot__Account__dlm/fields/Last_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month__c</fullName>
    <label>Last 12 Month $</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>