force-app/main/default/objects/ssot__Account__dlm/fields/Lifetime_Orders__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Orders__c</fullName>
    <label>Lifetime Orders</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>