force-app/main/default/objects/ssot__Account__dlm/fields/LY_TY_Prior_Mo__c.field-meta.xml
<CustomField>
    <fullName>LY_TY_Prior_Mo__c</fullName>
    <label>LY/TY Prior Mo $%</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>