force-app/main/default/objects/ssot__Account__dlm/fields/N_A_Storage_only_RentStatus__c.field-meta.xml
<CustomField>
    <fullName>N_A_Storage_only_RentStatus__c</fullName>
    <label>N/A Storage only-RentStatus</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>