force-app/main/default/objects/ssot__Account__dlm/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <label>Number Of Employees</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>