force-app/main/default/objects/ssot__Account__dlm/fields/P4_Date__c.field-meta.xml
<CustomField>
    <fullName>P4_Date__c</fullName>
    <label>P4 Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>