force-app/main/default/objects/ssot__Account__dlm/fields/Perf365Days__c.field-meta.xml
<CustomField>
    <fullName>Perf365Days__c</fullName>
    <label>Perf365Days $</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>