force-app/main/default/objects/ssot__Account__dlm/fields/Perf_Percent_Ly_Ty__c.field-meta.xml
<CustomField>
    <fullName>Perf_Percent_Ly_Ty__c</fullName>
    <label>Perf Percent Ly/Ty</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>