force-app/main/default/objects/ssot__Account__dlm/fields/PerfAvgLast3MosAmt__c.field-meta.xml
<CustomField>
    <fullName>PerfAvgLast3MosAmt__c</fullName>
    <label>PerfAvgLast3MosAmt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>