force-app/main/default/objects/ssot__Account__dlm/fields/Person_Department__c.field-meta.xml
<CustomField>
    <fullName>Person_Department__c</fullName>
    <label>Person Department</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>