force-app/main/default/objects/ssot__Account__dlm/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <label>Person Email</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>