force-app/main/default/objects/ssot__Account__dlm/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>