force-app/main/default/objects/ssot__Account__dlm/fields/Platinum_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Anniversary_Date__c</fullName>
    <label>Platinum Anniversary Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>