force-app/main/default/objects/ssot__Account__dlm/fields/Platinum_Prior_Period__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Prior_Period__c</fullName>
    <label>Platinum Prior Period $</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>