force-app/main/default/objects/ssot__Account__dlm/fields/Platinum_Prospect_Date__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Prospect_Date__c</fullName>
    <label>Platinum Prospect Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>