force-app/main/default/objects/ssot__Account__dlm/fields/Postal_Address_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address_Invalid__c</fullName>
    <label>Postal Address Invalid</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>