force-app/main/default/objects/ssot__Account__dlm/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>